@@ -1,5 +1,3 @@
-DIST libiphone-0.9.4.tar.bz2 345548 RMD160 cf289f6854886811c68029468b29bbc33481b6b4 SHA1 fd78ccec60fde3a05451911c299d0fa027623cc4 SHA256 022ada25c2e651e5702b341db802bb791c9d016eeb5cf38b3ab1f26a1637dc45
-EBUILD libiphone-0.9.4.ebuild 884 RMD160 c5530dd08bec354a4926ca8dac9acaf63bdd7400 SHA1 eb7f81420c5ab26f825412a1cc8ceb46edca9eb7 SHA256 277c3831c9a5523c0c01b1b3ad81690436155d4b6867986625aea96eca026233
 EBUILD libiphone-9999.ebuild 884 RMD160 c5530dd08bec354a4926ca8dac9acaf63bdd7400 SHA1 eb7f81420c5ab26f825412a1cc8ceb46edca9eb7 SHA256 277c3831c9a5523c0c01b1b3ad81690436155d4b6867986625aea96eca026233
-MISC ChangeLog 230 RMD160 9d3333c3a51b18f88a676025347f4e3abac132cb SHA1 3a5ba3548dc4afc30e69b0515fd6c50b9d60e762 SHA256 0166847342b44493f6c17079d729cc3d3dddc0bdf624378274463fd56438ab11
+MISC ChangeLog 331 RMD160 974bd10706d07effcb33d6dad28e7b5853a60bdb SHA1 c8199813570c9fad7916c4ab2b8a0c2688850d40 SHA256 830b4bb9f21c717c0ae316173e21034c3ff5f0c08ebf7f84c2de3c1d66385117
 MISC metadata.xml 473 RMD160 b86581194489d56ef41d53fe71ed0fdb3e7ee53f SHA1 35d42523d94db2338b7691d12973a2b658828997 SHA256 0e5578632726184f3e4a1823e7bce50d22ce3b0ec20a9b0c4f8fa754a67929fc
